--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "t",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://flakytestdetection.github.io/dashboard/",
   "dependencies": {
     "firebase": "^3.9.0",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-mixin": "^2.0.2",
     "reactfire": "^1.0.0"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
+  "deploy" : "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
