--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
-  "deploy" : "npm run build&&gh-pages -d build",
+  "deploy" : "npm run build&&gh-pages -r git@github.com:FlakyTestDetection/dashboard -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
