--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://flakytestdetection.github.io/dashboard/",
   "dependencies": {
     "firebase": "^3.9.0",
+    "firebaseui": "^2.0.0",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
@@ -16,7 +17,7 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
-  "deploy" : "npm run build&&gh-pages -r git@github.com:FlakyTestDetection/dashboard -d build",
+    "deploy": "npm run build&&gh-pages -r git@github.com:FlakyTestDetection/dashboard -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
