--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebaseui": "^2.0.0",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
+    "react-confirm-bootstrap": "^3.1.4",
     "react-dom": "^15.5.4",
     "react-mixin": "^2.0.2",
     "reactfire": "^1.0.0"
